--- a/src/sass/controllers/_fragments.scss
+++ b/src/sass/controllers/_fragments.scss
@@ -1,5 +1,10 @@
-body.fragments {
+body.fragments.index {
 	
+	// Add bottom padding back in
+	#main {
+		padding-bottom: $footer-height;
+	}
+
 	.fragments-wrap {
 		position: relative;
 	}
